@@ -128,9 +128,10 @@ i.valid			{color:#FFF;}
 table.pub		{font-size:0.9em; line-height:1.4em; max-width:600px; text-align:right; width:600px;}
 table.pub th	{font-size:1.25em; padding:15px 30px 15px 0;}
 table.pub td	{border-bottom:1px solid #3d4363; padding:15px 35px 15px 0;}
-table.pub td:first-child, table.pub th:first-child 	{text-align:left;}
+table.pub td:first-child, table.pub th:first-child 	{text-align:left; width:290px;}
+table.pub th:nth-child(2)	{width:180px; text-align:right;}
 table.pub th:last-child 	{padding-right:0;}
-table.pub td:last-child		{padding-right:5px;}
+table.pub td:last-child		{padding-right:5px; font-size:1.2em;}
 table.pub tr:last-child	td	{border-bottom:0;}
 table.pub td.ref			{padding:0;}
 table.pub td.ref a			{display:block; padding:15px 35px 15px 0; color:#FFC107;}
