@@ -2,6 +2,7 @@ Static site (2018-03-16 shi)
 ==============================
 Updated Dash section in About page
 Updated About page styles
+Added IATI Registry links to Dash
 
 
 Static site (2017-09-06 shi)
